--- a/dashboard.html
+++ b/dashboard.html
@@ -5,63 +5,103 @@
 <title>Crew Check-in – Dashboard</title>
 <meta name="viewport" content="width=device-width,initial-scale=1">
 
-<link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css">
+<!-- Leaflet -->
+<link rel="stylesheet"
+      href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css">
 
 <style>
- html,body{margin:0;height:100%}
- #bar{display:flex;gap:.6rem;align-items:center;padding:.4rem .6rem;background:#fafafa;box-shadow:0 1px 3px rgba(0,0,0,.07)}
- #map{height:calc(100% - 46px)}
- select,button{padding:.3rem .6rem;font-size:15px}
+  html,body{margin:0;height:100%}
+  #bar{display:flex;gap:.6rem;align-items:center;
+       padding:.4rem .6rem;background:#fafafa;
+       box-shadow:0 1px 3px rgba(0,0,0,.08);
+       font:15px system-ui,Arial}
+  #map{height:calc(100% - 46px)}
+  select,button{padding:.3rem .6rem;font-size:15px}
+  #msg{font-style:italic;color:#555}
 </style>
 </head>
 <body>
+  <!-- thanh công cụ -->
   <div id="bar">
-    <label>Chọn ca:</label>
-    <select id="shift"><option value="">— Tất cả ca —</option><option>CA01</option><option>CA02</option></select>
-    <button id="reload">Refresh</button><span id="msg"></span>
+    <label>Chọn ca:&nbsp;</label>
+    <select id="shift">
+      <option value="">— Tất cả ca —</option>
+      <option>CA01</option><option>CA02</option><option>CA03</option>
+    </select>
+    <button id="reload">Refresh</button>
+    <span id="msg"></span>
   </div>
+
   <div id="map"></div>
 
-  <!-- LUÔN đặt trước code của mình -->
+  <!-- Leaflet JS -->
   <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
 
   <script>
-  /* URL CSV publish to web */
-  const CSV_URL = 'https://docs.google.com/spreadsheets/d/e/2PACX-1vQUumGlaLtMcTsv9ImwXLbNWrgFbPLUGuKV-tTa751FpjFqWs0ZlyEZ2iCdPTvLobG4Pqub5bewVSL5/pub?gid=963908913&single=true&output=csv';
+  /* Google Sheet đã “Xuất bản lên web” dưới dạng CSV */
+  const CSV_URL =
+    'https://docs.google.com/spreadsheets/d/e/2PACX-1vQUumGlaLtMcTsv9ImwXLbNWrgFbPLUGuKV-tTa751FpjFqWs0ZlyEZ2iCdPTvLobG4Pqub5bewVSL5/pub?gid=963908913&single=true&output=csv';
 
   window.addEventListener('load', () => {
-    const map   = L.map('map').setView([10.3,106.2],7);
+    /* 1. Khởi tạo bản đồ */
+    const map   = L.map('map').setView([10.3,106.2], 7);
     L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png',
-                {attribution:'© OSM'}).addTo(map);
-    const layer = L.layerGroup().addTo(map);
+                {attribution:'© OpenStreetMap'})
+      .addTo(map);
+    const markers = L.layerGroup().addTo(map);
 
-    document.getElementById('reload').onclick = load;
-    load();
+    /* 2. Hàm tiện ích */
+    const $ = id => document.getElementById(id);
+    const msg = t => $('msg').textContent = t;
 
-    function msg(t){document.getElementById('msg').textContent=t;}
+    /* 3. Tải & vẽ điểm */
+    async function load() {
+      msg('Đang tải dữ liệu…');
+      markers.clearLayers();
 
-    function load(){
-      msg('Đang tải…'); layer.clearLayers();
-      fetch(CSV_URL+'&t='+Date.now())
-        .then(r=>r.text())
-        .then(csv=>{
-          const rows = csv.trim().split(/\r?\n/).map(l=>l.split(','));
-          rows.shift();
-          const shiftSel = document.getElementById('shift').value||null;
-          const pts=[];
-          rows.forEach(r=>{
-            const [ ,email,shift,lat,lon] = r;
-            if(shiftSel && shift!==shiftSel) return;
-            const la=+lat, lo=+lon;
-            if(!la||!lo) return;
-            L.marker([la,lo]).bindPopup(`<b>${email}</b><br>Ca: ${shift}`).addTo(layer);
-            pts.push([la,lo]);
-          });
-          pts.length ? (map.fitBounds(pts,{padding:[30,30]}),msg(`Hiển thị ${pts.length}`))
-                      : msg('Không có dữ liệu');
-        })
-        .catch(e=>{console.error(e);msg('Lỗi tải');});
+      try {
+        /* thêm tham số thời gian để tránh cache */
+        const resp = await fetch(CSV_URL + '&t=' + Date.now());
+        if (!resp.ok) throw new Error(resp.status + ' ' + resp.statusText);
+        const text = await resp.text();
+
+        /* parse CSV bằng split – Sheet chỉ 5 cột nên đủ an toàn */
+        const rows = text.trim().split(/\r?\n/).slice(1)   // bỏ header
+                       .map(l => l.split(','));
+        const sel = $('shift').value || null;
+        const pts = [];
+
+        rows.forEach(r => {
+          const [ ,email,shift,lat,lon] = r;   // Timestamp ở cột đầu
+          if (sel && shift !== sel) return;
+          const la = +lat, lo = +lon;
+          if (!la || !lo) return;
+          L.marker([la,lo])
+            .bindPopup(`<b>${email}</b><br>Ca: ${shift}`)
+            .addTo(markers);
+          pts.push([la,lo]);
+        });
+
+        if (pts.length) {
+          map.fitBounds(pts, {padding:[30,30]});
+          msg(`Đã hiển thị ${pts.length} vị trí`);
+        } else {
+          msg('Không có dữ liệu phù hợp');
+        }
+
+      } catch (err) {
+        console.error(err);
+        alert('Không tải được dữ liệu: ' + err.message);
+        msg('Lỗi tải dữ liệu');
+      }
     }
+
+    /* 4. Sự kiện */
+    $('reload').onclick = load;
+    $('shift').onchange = load;
+
+    /* 5. Lần đầu tự tải */
+    load();
   });
   </script>
 </body>
